Just made the sanitize HTML working

--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
     </main>
 
     <div class="result">
-       
+        <!-- <div class="resultText">
+            <h2 class="gp">3.4 cgpa</h2>
+            <p class="resultTextRmk">second class Upper</p>
+        </div>
+        <button class="resultBtn">OK</button> -->
     </div>
 
     <script src="ui.js"></script>
